# silo

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
src/: args.rs  config.rs  main.rs  repo.rs  templating.rs  utils.rs
src/fs_access/: buffered.rs  mod.rs
src/repo/: contents.rs  hooks.rs  mod.rs
src/scripting/: log_module.rs  mod.rs  path_module.rs  require.rs  silo_module.rs  utils_module.rs
src/templating/: helpers.rs  mod.rs
