[package]
name = "dot-silo"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/Trivernis/silo"
description = "A dotfile manager"
license-file = "LICENSE.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chksum = "0.3.0"
clap = { version = "4.4.14", features = ["derive", "env"] }
dialoguer = "0.11.0"
dirs = "5.0.1"
figment = { version = "0.10.13", features = ["toml", "env"] }
git2 = "0.18.1"
globset = { version = "0.4.14", features = ["serde", "serde1"] }
handlebars = "5.0.0"
handlebars_switch = "0.6.0"
lazy_static = "1.4.0"
log = "0.4.20"
miette = { version = "5.10.0", features = ["serde", "fancy"] }
pretty_env_logger = "0.5.0"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
sys-info = "0.9.1"
tempfile = "3.9.0"
toml = "0.8.8"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.7.2"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = []
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu", "aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
pr-run-mode = "plan"
